<resources>
    <string name="app_name">Registration App</string>
    <string name="registrationform">Registration Form</string>
    <string name="welcome">Welcome to Adventure Learning Club!</string>
    <string name="name">Full Name</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="g">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sid">Student ID</string>
    <string name="sch">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="r">Register</string>
</resources>