<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationform"
        android:textSize="29dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="18dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="67dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="100dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="114dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="144dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="141dp"
        android:textStyle="bold"/>

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="181dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sid"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="242dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sch"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="373dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="433dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="232dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="285dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="360dp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="419dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="121dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/first"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="106dp" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="100dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="533dp" />
</androidx.constraintlayout.widget.ConstraintLayout>